--- a/index.html
+++ b/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startup</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Signika:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="row align-items-end">
-            <header class="text-center col-8">
-                <h1 class="text-uppercase"><strong>The Biggest Starup<span>Event of the Year</span></strong></h1>
+        <div class="row">
+            <header class="text-center col-12">
+                <h1 class="text-uppercase"><strong>Web Byte <span class="head span">Software Studio</span></strong></h1>
+                <p>CREATE YOUR COMMUNITY. CONNECT WITH THE WORLD!</p>
             </header>
-            <section class="text-center col-8">
+            <section class="text-center col-12">
                 <hr>
-                <a href="http://eepurl.com/g1iN8j"><button class="btn btn-primary btn-xl">Find out more</button></a> 
+                <a href="http://eepurl.com/g1iN8j">
+                    <button class="btn btn-primary btn-xl">Find out more</button>
+                </a>
             </section>
+        </div>
+        <div class="row justify-content-center call-to-action">
+            <div class="col-5">
+                <h2>Business Platform</h2>
+                <ul>
+                    <li>Client Orders</li>
+                    <li>Inventory</li>
+                    <li>Payments</li>
+                </ul>
+            </div>
+            <div class="col-5 span">
+                <h3>Start your community</h3>
+                <ul>
+                    <li>Create a blog</li>
+                    <li>Websites</li>
+                    <li>Social Media</li>
+                </ul>
+            </div>
+            <!-- <div class="col"></div> -->
         </div>
     </div>
 </body>
